# sodiumpp

./: .gitignore  CMakeLists.txt  check
cmake/: FindSodium.cmake
sodiumpp/: locked_string.cpp  sodiumpp.cpp  test.cpp
sodiumpp/include/sodiumpp/: locked_string.h  sodiumpp.h
